# airflow-provider-skypilot

./: .gitignore  .pre-commit-config.yaml  README.md  format.sh  pyproject.toml  requirements-dev.txt
.github/workflows/: pytest.yml
example_dags/: sky_aws_credentials.py  sky_gcp_credentials.py  sky_hello.py  sky_hello_local.py  sky_train.py
example_skypilot_yamls/: aws.sky.yaml
example_task_yamls/: aws.sky.yaml  gcp.sky.yaml  hello.sky.yaml
sky_provider/: __init__.py
sky_provider/example_dags/: sky_aws_credentials.py  sky_gcp_credentials.py  sky_hello.py
sky_provider/operators/: __init__.py  credentials_utils.py  sky_task.py
skypilot_provider/operators/: __init__.py  cluster.py  credentials_utils.py  sky_task.py
tests/operators/: test_cluster.py
